# mechanical_drifters

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  pyproject.toml
data/: drifters_kiel_bight.csv
docs/: architecture.md  class-diagram.md  drifter-model.md  parcels-v4-coupling.md  point-surface-drifter.md  spar-buoy.md  stokes-drift.md
examples/: parcels_3d_flow.py
examples/baltic_drifters/: 00_extract_science_periods.ipynb  00_extract_science_periods.md  00_extract_science_periods.py  00_get_cmems_data.ipynb  01_fetch_cmems_data.ipynb  01_fetch_cmems_data.md  01_fetch_cmems_data.py  01_idealized_flow.ipynb  02_cmems_point_particles.ipynb  02_derive_effective_currents.ipynb  02_derive_effective_currents.md  02_derive_effective_currents.py  03_cmems_drogued_drifter.ipynb  03_validate_effective_current_fields.ipynb  03_validate_effective_current_fields.md  03_validate_effective_current_fields.py  04_run_simulations.ipynb  04_run_simulations.md  04_run_simulations.py  04_stokes_analysis.ipynb  05_validation_plots.ipynb  05_validation_plots.md  05_validation_plots.py  05_wave_orbital_effects.ipynb  06_effective_current_fields.ipynb  06_run_short_simulations.ipynb  06_run_short_simulations.md  06_run_short_simulations.py  07_clean_drifter_data.ipynb  07_short_horizon_skill.ipynb  07_short_horizon_skill.md  07_short_horizon_skill.py  08_drifter_in_effective_currents.ipynb  09a_simulation.ipynb  09b_validation_plots.ipynb  10_along_track_validation.ipynb  11a_reseeded_simulation.ipynb  11b_reseeded_plots.ipynb  (+1 more)
notebooks/: 01_download_baltic_data.ipynb  02_test_with_sheared_flow.ipynb  03_test_with_cmems_data.ipynb  04_steady_state_derivation_out.ipynb  05_baltic_stokes_drift.ipynb  06_baltic_surface_currents.ipynb  07_stokes_vs_currents.ipynb  08_drifter_in_waves.ipynb  09_collect_drifter_data.ipynb  TestUV.ipynb  get_ds_baltic.ipynb
plans/: BACKLOG.md  ROADMAP.md  analytical_steady_state.md  api-polish.md  api-review.md  api_review.md  architecture-diagrams.md  architecture-v2.md  architecture-v5-simplified.md  backlog.md  c4-reseeded-validation.md  c5-parameter-sensitivity.md  code-review-remarks.md  consolidate-spar-buoy-prs.md  d-i-parcels-isolation.md  d2_phi_regularization.md  d3_notebook_cleanup.md  dw-c-lambdify-and-qdd.md  examples_rewrite.md  fsolve_steady_state.md  implement-A.md  model-independence-refactor.md  outlook_bsh_hbm_integration.md  package-rename-and-cleanup.md  parcels-interpolation-optimization.md  parcels_v4_output_bug.md  release-polish.md  review-code-quality.md  review-spar-buoy-pr.md  roadmap.md  spar-buoy-first-class.md  structure.md  z_convention_upward.md
tests/: conftest.py  test_drifter_parcels.py  test_drogued_drifter.py  test_integration_full_chain.py  test_lagrange_physics.py  test_lagrange_symbolic_fallback.py  test_numerical_edge_cases.py  test_point_surface_drifter.py  test_spar_buoy.py  test_spar_buoy_simple.py  test_stokes.py
(+1902 files in other folders)
