[project]
dependencies = ["sympy", "numpy", "scipy"]                              
name = "drogued_drifters"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system] 
build-backend = "hatchling.build"
requires = ["hatchling"]
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
drogued_drifters = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipython = ">=9.9.0,<10"
jupyterlab = ">=4.5.3,<5"
matplotlib = ">=3.10.8,<4"
pytest = ">=9.0.2,<10"
black = ">=26.1.0,<27"
black-jupyter = ">=26.1.0,<27"
copernicusmarine = ">=2.3.0,<3"
