[project]
dependencies = ["sympy", "numpy", "scipy", "xarray", "click", "parcels @ git+https://github.com/OceanParcels/parcels.git@17241585384f9cbb04a796cb3581cb49559df9df"]
name = "drogued_drifters"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
generate-eom = "drogued_drifters.cli:generate_eom"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
drogued_drifters = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipython = ">=9.9.0,<10"
jupyterlab = ">=4.5.3,<5"
matplotlib = ">=3.10.8,<4"
pytest = ">=9.0.2,<10"
black = ">=26.1.0,<27"
black-jupyter = ">=26.1.0,<27"
copernicusmarine = ">=2.3.0,<3"
netcdf4 = ">=1.7.4,<2"
pyproj = ">=3.7.2,<4"
papermill = ">=2.7.0,<3"
cartopy = ">=0.25.0,<0.26"
