[project]
dependencies = ["sympy", "numpy", "scipy", "xarray", "parcels @ git+https://github.com/parcels-code/parcels.git@17241585384f9cbb04a796cb3581cb49559df9df"]
name = "drogued_drifters"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
drogued_drifters = { path = ".", editable = true }

[tool.pytest.ini_options]
norecursedirs = ["tmp_*"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
addopts = "-m 'not slow'"

[tool.pixi.tasks]
test-cov = "pytest --cov=drogued_drifters --cov-report=term-missing -v"

[tool.pixi.dependencies]
ipython = ">=9.9.0,<10"
jupyterlab = ">=4.5.3,<5"
matplotlib = ">=3.10.8,<4"
pytest = ">=9.0.2,<10"
black = ">=26.1.0,<27"
black-jupyter = ">=26.1.0,<27"
copernicusmarine = ">=2.3.0,<3"
netcdf4 = ">=1.7.4,<2"
pyproj = ">=3.7.2,<4"
papermill = ">=2.7.0,<3"
cartopy = ">=0.25.0,<0.26"
pytest-cov = ">=7.1.0,<8"
nodejs = ">=25.8.2,<25.9"
py-spy = ">=0.4.1,<0.5"
jupytext = ">=1.19.1,<2"
snakeviz = ">=2.2.2,<3"
numba = ">=0.65.0,<0.66"
